[gd_scene load_steps=30 format=3 uid="uid://v1dle5t75pan"]

[ext_resource type="Script" path="res://Scripts/PawnShop.gd" id="1_44lvi"]
[ext_resource type="Texture2D" uid="uid://dahmg5t0k8ka1" path="res://Art/Characters/player.png" id="2_doxdg"]
[ext_resource type="PackedScene" uid="uid://dgx4d5ogv1yi8" path="res://Scenes/UI/Dialogue.tscn" id="3_bjrrm"]
[ext_resource type="Script" path="res://Scripts/PawnShopInventory.gd" id="4_ilsyw"]
[ext_resource type="Script" path="res://Scripts/Inventory/InventoryUI.gd" id="5_vwjpk"]
[ext_resource type="Texture2D" uid="uid://b4w3dtepsdun8" path="res://Art/Objects/coin_pouch.png" id="7_v5uso"]
[ext_resource type="PackedScene" uid="uid://c1c8vyfyanpjj" path="res://Scenes/Inventory/ItemSlot.tscn" id="8_oyt86"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4s4x0"]
atlas = ExtResource("2_doxdg")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_st52e"]
atlas = ExtResource("2_doxdg")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcx5a"]
atlas = ExtResource("2_doxdg")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u14k2"]
atlas = ExtResource("2_doxdg")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0ys1"]
atlas = ExtResource("2_doxdg")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d70ki"]
atlas = ExtResource("2_doxdg")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_djakc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4s4x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st52e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcx5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u14k2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0ys1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d70ki")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p1b4h"]
size = Vector2(8, 11)

[sub_resource type="CircleShape2D" id="CircleShape2D_4io8b"]
radius = 31.0161

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yuy0q"]
bg_color = Color(0.6, 0.6, 0.6, 0.596078)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d3aib"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hauld"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a4y2o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_viqlf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a1sxe"]

[sub_resource type="Theme" id="Theme_58mhd"]
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_d3aib")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_hauld")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_a4y2o")
VScrollBar/styles/scroll = SubResource("StyleBoxEmpty_viqlf")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_a1sxe")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rod21"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_323wq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cdjiu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ch8b6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ipec5"]

[sub_resource type="Theme" id="Theme_nyfi1"]
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_rod21")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_323wq")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_cdjiu")
VScrollBar/styles/scroll = SubResource("StyleBoxEmpty_ch8b6")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_ipec5")

[node name="NPC" type="CharacterBody2D"]
position = Vector2(561, 218)
script = ExtResource("1_44lvi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_djakc")
frame_progress = 0.05488

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 12)
shape = SubResource("RectangleShape2D_p1b4h")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 9)
shape = SubResource("CircleShape2D_4io8b")

[node name="Dialogue" parent="." instance=ExtResource("3_bjrrm")]
z_index = 1
offset_left = -56.0
offset_top = -48.0
offset_right = -56.0
offset_bottom = -48.0

[node name="RichTextLabel" parent="Dialogue/NinePatchRect" index="0"]
offset_right = 97.0
text = "Pawn Shop"

[node name="RichTextLabel2" parent="Dialogue/NinePatchRect" index="1"]
text = "Come sell items here.
"

[node name="Label" type="Label" parent="."]
offset_left = 15.0
offset_top = 5.0
offset_right = 89.0
offset_bottom = 24.0
scale = Vector2(0.5, 0.5)
text = "F to speak"

[node name="InventorySell" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.32088, 0.32088)
script = ExtResource("4_ilsyw")

[node name="InventoryUI" type="Control" parent="InventorySell"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -518.0
offset_top = -286.0
offset_right = -118.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.49067, 2.49067)
script = ExtResource("5_vwjpk")

[node name="InventoryPanel" type="Panel" parent="InventorySell/InventoryUI"]
layout_mode = 0
offset_top = -18.8704
offset_right = 400.0
offset_bottom = 231.13
theme_override_styles/panel = SubResource("StyleBoxFlat_yuy0q")

[node name="SellButton" type="Button" parent="InventorySell/InventoryUI/InventoryPanel"]
layout_mode = 0
offset_left = 303.131
offset_top = 194.325
offset_right = 381.131
offset_bottom = 221.325
pivot_offset = Vector2(19, 13)
text = "Drop Item"

[node name="InventoryLabel" type="Label" parent="InventorySell/InventoryUI/InventoryPanel"]
layout_mode = 0
offset_left = 32.0
offset_top = 2.81049
offset_right = 107.0
offset_bottom = 25.8105
text = "Item Sale"

[node name="Button" type="Button" parent="InventorySell/InventoryUI/InventoryPanel"]
layout_mode = 0
offset_left = 381.423
offset_top = 4.01496
offset_right = 400.423
offset_bottom = 31.015
scale = Vector2(0.754708, 0.754708)
text = "X"

[node name="CoinImage" type="TextureRect" parent="InventorySell/InventoryUI/InventoryPanel"]
layout_mode = 0
offset_left = 231.0
offset_top = -2.80957
offset_right = 1431.0
offset_bottom = 1179.19
scale = Vector2(0.0260892, 0.0260892)
texture = ExtResource("7_v5uso")

[node name="CoinLabel" type="Label" parent="InventorySell/InventoryUI/InventoryPanel"]
layout_mode = 0
offset_left = 264.0
offset_top = 6.39401
offset_right = 304.0
offset_bottom = 29.394
text = "0"

[node name="ScrollDescription" type="ScrollContainer" parent="InventorySell/InventoryUI/InventoryPanel"]
layout_mode = 2
offset_left = 19.6734
offset_top = 187.098
offset_right = 289.673
offset_bottom = 237.098
theme = SubResource("Theme_58mhd")

[node name="Description" type="Label" parent="InventorySell/InventoryUI/InventoryPanel/ScrollDescription"]
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 14
autowrap_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="InventorySell/InventoryUI/InventoryPanel"]
custom_minimum_size = Vector2(360, 150)
layout_mode = 2
offset_left = 20.4764
offset_top = 27.7034
offset_right = 380.476
offset_bottom = 177.703
theme = SubResource("Theme_nyfi1")

[node name="CenterContainer" type="CenterContainer" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer"]
layout_mode = 2

[node name="InventoryGrid" type="GridContainer" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer"]
layout_mode = 2
columns = 8

[node name="ItemSlot" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot2" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot3" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot4" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot5" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot6" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot7" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot8" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot9" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot10" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot11" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot12" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot13" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot14" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot15" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot16" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot17" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot18" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot19" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot20" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot21" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot22" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot23" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot24" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot25" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot26" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot27" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot28" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot29" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot30" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot31" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[node name="ItemSlot32" parent="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid" instance=ExtResource("8_oyt86")]
layout_mode = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="InventorySell/InventoryUI/InventoryPanel/SellButton" to="InventorySell" method="sell_item"]
[connection signal="pressed" from="InventorySell/InventoryUI/InventoryPanel/Button" to="." method="exit"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot2" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot3" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot4" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot5" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot6" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot7" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot8" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot9" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot10" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot11" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot12" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot13" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot14" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot15" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot16" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot17" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot18" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot19" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot20" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot21" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot22" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot23" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot24" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot25" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot26" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot27" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot28" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot29" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot30" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot31" to="InventorySell" method="_on_item_slot_clicked"]
[connection signal="CLICKED" from="InventorySell/InventoryUI/InventoryPanel/ScrollContainer/CenterContainer/InventoryGrid/ItemSlot32" to="InventorySell" method="_on_item_slot_clicked"]

[editable path="Dialogue"]
